--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@coreui/react": "^5.4.1",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
@@ -14,6 +15,7 @@
     "react-flatpickr": "^3.10.13",
     "react-icons": "^5.4.0",
     "react-international-phone": "^4.5.0",
+    "react-intersection-observer": "^9.15.1",
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.4.11",
     "react-router-dom": "^7.1.5",
